# AI-factcheck

./: .gitignore  LICENSE  README.md  claim-extraction-template.txt  get-verified-sites.py  main.py  pyproject.toml  reliable-sources.pkl  sample-source-texts.txt  selection-system.txt  selection-user.txt
meta/: example-output.txt  old-example-output.txt
notes/: chunking strategies.md  claimify notes.txt  decontextualisation prompt.txt  main tabs.txt  retrieval strategies.md  selection prompt.txt
scripts/: fix-regex.py  get-verified-sites.py  proposition_chunking.ipynb  tests.ipynb
src/: .env.example  claim_extraction_models.py  config.py  main.py  other_models.py  run_dummy.py  utils.py
src/data/: sample-input.txt  sample-source-texts.txt
src/prompts/: claim-extraction-template.txt  selection-system.txt  selection-user.txt
utilities/: claimify.ipynb  fix-regex.py  tests.ipynb
