[project]
name = "ai-factcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.86.0",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=1.7.1",
    "langchain>=1.2.12",
    "langchain-anthropic>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "nltk>=3.9.3",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "serpapi>=1.0.2",
    "tavily-python>=0.7.23",
    "tldextract>=5.3.1",
    "torch>=2.10.0",
    "news-please>=1.6.0",
    "trafilatura>=2.0.0",
    "transformers>=5.3.0",
]
